Added dummy email and password

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,9 @@
 <fieldset>
     <legend>LOGIN</legend>
     <form (ngSubmit)="login()">
-      <p>Email</p>
+      <p>Email (user&#64;email.com)</p>
       <input [(ngModel)]="email" type="email" name="email" id="email">
-      <p>Password</p>
+      <p>Password (password)</p>
       <input [(ngModel)]="password" type="password" name="password" id="password">
       <br>
       <br>
